--- a/package.json
+++ b/package.json
@@ -37,16 +37,19 @@
     "eslint": "eslint . --ext ts",
     "prettier": "prettier \"**/*.{css,html,ts,js,java}\"",
     "swiftlint": "node-swiftlint",
-    "docgen": "docgen --api BoxpressdFirebaseAuthPlugin --output-readme README.md --output-json dist/docs.json",
-    "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
+    "build": "npm run clean && tsc && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "pack:android": "npm run build && npx cap copy android",
+    "pack:ios": "npm run build && npx cap copy ios",
+    "edit:android": "npx cap open android",
+    "edit:ios": "npx cap open ios"
   },
   "devDependencies": {
     "@capacitor/android": "next",
+    "@capacitor/cli": "next",
     "@capacitor/core": "next",
-    "@capacitor/docgen": "^0.0.10",
     "@capacitor/ios": "next",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^1.0.1",
@@ -60,7 +63,8 @@
     "typescript": "~4.0.3"
   },
   "peerDependencies": {
-    "@capacitor/core": "next"
+    "@capacitor/core": "next",
+    "firebase": "^8.0.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
@@ -74,5 +78,8 @@
     "android": {
       "src": "android"
     }
+  },
+  "dependencies": {
+    "firebase": "^8.6.3"
   }
 }
